# cygunet

./: .gitignore  .pre-commit-config.yaml  README.md  add_dependencies.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
conf/base/: catalog.yml  parameters.yml
docs/source/: conf.py  index.rst
src/cygunet/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/cygunet/datasets/: __init__.py  cygno_data.py  cyimage.py  numpy_array_data.py
src/cygunet/pipelines/data_processing/: nodes.py  utils.py
src/cygunet/pipelines/preprocessing/: nodes.py  pipeline.py  utils.py
tests/: test_run.py
tests/datasets/: test_cyimage.py
tests/nodes/: test_access_event.py
tests/pipelines/data_science/: test_pipeline.py
